syntax = "proto3";

option go_package = "github.com/morfien101/dynamo-q/comms";
package comms;

service QueueService {
  // Checks if the lock is currently held
  rpc IsFrontOfQueue(QueueRequest) returns (QueueStatus);

  // Waits for a signal that the lock is obtained
  rpc SubscribeQueueStatus(QueueRequest) returns (stream QueueStatus);

  // Tells the lock handler to shut down
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

message QueueRequest {}

message QueueStatus {
  bool isFront = 1;
}

message ShutdownRequest {}

message ShutdownResponse {}